--- a/tests/libjlm/opt/alias-analyses/Makefile.sub
+++ b/tests/libjlm/opt/alias-analyses/Makefile.sub
@@ -1,5 +1,6 @@
 TESTS += \
 	libjlm/opt/alias-analyses/TestAgnosticMemoryNodeProvider \
+	libjlm/opt/alias-analyses/TestLifetimeAwareMemoryNodeProvider \
 	libjlm/opt/alias-analyses/TestMemoryStateEncoder \
 	libjlm/opt/alias-analyses/TestRegionAwareMemoryNodeProvider \
 	libjlm/opt/alias-analyses/TestSteensgaard \
