--- a/libjlm/Makefile.sub
+++ b/libjlm/Makefile.sub
@@ -62,6 +62,7 @@ LIBJLM_SRC = \
     libjlm/src/ir/hls/hls.cpp \
     \
     libjlm/src/opt/alias-analyses/AgnosticMemoryNodeProvider.cpp \
+    libjlm/src/opt/alias-analyses/LifetimeAwareMemoryNodeProvider.cpp \
     libjlm/src/opt/alias-analyses/MemoryStateEncoder.cpp \
     libjlm/src/opt/alias-analyses/MemoryNodeProvider.cpp \
     libjlm/src/opt/alias-analyses/Operators.cpp \
