--- a/Makefile.sub
+++ b/Makefile.sub
@@ -59,6 +59,7 @@ include $(JLM_ROOT)/libjive/Makefile.sub
 include $(JLM_ROOT)/libjlm/Makefile.sub
 include $(JLM_ROOT)/jlc/Makefile.sub
 include $(JLM_ROOT)/jlm-print/Makefile.sub
+include $(JLM_ROOT)/mlir-print/Makefile.sub
 include $(JLM_ROOT)/jlm-opt/Makefile.sub
 include $(JLM_ROOT)/jlm-hls/Makefile.sub
 include $(JLM_ROOT)/jhls/Makefile.sub
@@ -66,10 +67,10 @@ include $(JLM_ROOT)/docs/Makefile.sub
 include $(JLM_ROOT)/tests/Makefile.sub
 
 .PHONY: jlm-debug
-jlm-debug: libjlm-debug jlm-print-debug jlm-opt-debug jlm-hls-debug jlc-debug jhls-debug
+jlm-debug: libjlm-debug jlm-print-debug mlir-print-debug jlm-opt-debug jlm-hls-debug jlc-debug jhls-debug
 
 .PHONY: jlm-release
-jlm-release: libjlm-release jlm-print-release jlm-opt-release jlm-hls-release jlc-release jhls-release
+jlm-release: libjlm-release jlm-print-release mlir-print-release jlm-opt-release jlm-hls-release jlc-release jhls-release
 
 .PHONY: jlm-clean
 jlm-clean:
